# XRPApp

./: .gitignore  README.md  main.py  pyproject.toml
app/api/: __init__.py  general.py
auth/routers/: __init__.py
backend/: README.md  pyproject.toml
backend/app/: config.py
backend/app/api/: __init__.py  general.py  wallet.py
backend/app/services/: wallet.py
backend/auth/: models.py  xrpl.py
backend/auth/routers/: __init__.py  auth.py  did.py
backend/auth/services/: ipfs.py  jwt.py
backend/db/migrations/: did.sql
backend/tests/: test_wallet.py
backend/xrp/: check_balances.py  final_destination.py
backend/xrp/models/: loan.py
backend/xrp/routers/: __init__.py  loan_router.py
backend/xrp/services/: xrpl_service.py
db/: db.py
frontend/: package-lock.json  package.json  tempCodeRunnerFile.js  troll.js  wallet.js
frontend/app/: page.tsx
frontend/app/auth/: page.tsx
